--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -1,1 +1,291 @@
-全能订阅
+<!doctype html>
+<html lang="zh-CN" data-theme="light">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>全能订阅 AllRound Subscription · 聚合 · 订阅 · 搜索 · 推送</title>
+  <meta name="description" content="全能订阅 - 面向多平台的内容聚合与订阅系统，支持智能搜索、实时推送、风险检测、权限与限流、性能监控。" />
+  <meta name="theme-color" content="#0ea5e9" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='18' fill='%230ea5e9'/%3E%3Ctext x='50' y='58' font-size='56' text-anchor='middle' fill='white' font-family='Arial, Helvetica, sans-serif'%3E订%3C/text%3E%3C/svg%3E" />
+  <link rel="stylesheet" href="./assets/styles.css" />
+</head>
+<body>
+  <header class="site-header">
+    <div class="container nav">
+      <a class="brand" href="#home" aria-label="全能订阅">
+        <span class="logo" aria-hidden="true">订</span>
+        <span class="brand-text">全能订阅</span>
+      </a>
+      <nav class="menu" aria-label="主导航">
+        <a href="#features">功能</a>
+        <a href="#architecture">架构</a>
+        <a href="#quickstart">快速开始</a>
+        <a href="#api">API</a>
+        <a href="#contact">联系</a>
+      </nav>
+      <div class="actions">
+        <button id="themeToggle" class="icon-btn" aria-label="切换主题" title="切换主题">
+          <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg>
+        </button>
+        <a class="btn btn-primary" href="https://github.com/" target="_blank" rel="noopener">GitHub</a>
+      </div>
+    </div>
+  </header>
+
+  <main id="home">
+    <section class="hero">
+      <div class="container hero-inner">
+        <div class="hero-text">
+          <h1>全能订阅 AllRound Subscription</h1>
+          <p class="subtitle">聚合全平台内容，一站式订阅、搜索与智能推送。内置内容检测、权限与限流、性能监控，轻松构建你的内容运营中台。</p>
+          <div class="cta">
+            <a class="btn btn-primary" href="#quickstart">立即开始</a>
+            <a class="btn btn-ghost" href="#features">查看功能</a>
+          </div>
+          <div class="platforms" aria-label="已支持平台">
+            <span class="badge">
+              <svg viewBox="0 0 24 24" width="16" height="16" aria-hidden="true"><circle cx="12" cy="12" r="10" fill="#1DA1F2"/></svg>
+              Twitter</span>
+            <span class="badge">
+              <svg viewBox="0 0 24 24" width="16" height="16" aria-hidden="true"><rect x="2" y="4" width="20" height="16" rx="3" fill="#07C160"/></svg>
+              微信</span>
+            <span class="badge">
+              <svg viewBox="0 0 24 24" width="16" height="16" aria-hidden="true"><rect x="3" y="3" width="18" height="18" rx="4" fill="#E6162D"/></svg>
+              微博</span>
+          </div>
+        </div>
+        <div class="hero-visual" aria-hidden="true">
+          <div class="glass-card">
+            <div class="stat">
+              <span class="stat-value">99.9%</span>
+              <span class="stat-label">可用性</span>
+            </div>
+            <div class="divider"></div>
+            <div class="stat">
+              <span class="stat-value">10k+</span>
+              <span class="stat-label">推送/日</span>
+            </div>
+            <div class="divider"></div>
+            <div class="stat">
+              <span class="stat-value"><span class="mono">&lt;120ms</span></span>
+              <span class="stat-label">API 延迟</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="hero-bg" aria-hidden="true"></div>
+    </section>
+
+    <section id="features" class="section">
+      <div class="container">
+        <h2 class="section-title">核心功能</h2>
+        <p class="section-desc">围绕多平台内容聚合的全栈能力，模块化设计，可按需扩展。</p>
+        <div class="grid features-grid">
+          <article class="card">
+            <div class="icon"><svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true"><path fill="currentColor" d="M10 2a8 8 0 0 1 6.32 12.9l4.39 4.39-1.42 1.42-4.39-4.39A8 8 0 1 1 10 2m0 2a6 6 0 1 0 0 12 6 6 0 0 0 0-12z"/></svg></div>
+            <h3>多源聚合搜索</h3>
+            <p>统一接口聚合 Twitter、微信、微博等平台内容，缓存加速与失败重试保障稳定性。</p>
+            <ul class="bullets">
+              <li>可插拔适配器架构</li>
+              <li>分级缓存与并发控制</li>
+              <li>统一错误与异常处理</li>
+            </ul>
+          </article>
+          <article class="card">
+            <div class="icon"><svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true"><path fill="currentColor" d="M5 3h14a2 2 0 0 1 2 2v9a6 6 0 1 1-12 0H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2m7 15a4 4 0 0 0 4-4H8a4 4 0 0 0 4 4z"/></svg></div>
+            <h3>智能订阅</h3>
+            <p>灵活的订阅模型与权限体系，支持会员管理、额度限制与到期提醒。</p>
+            <ul class="bullets">
+              <li>用户/订阅/订单 数据模型</li>
+              <li>会员等级与配额控制</li>
+              <li>策略化权限校验</li>
+            </ul>
+          </article>
+          <article class="card">
+            <div class="icon"><svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true"><path fill="currentColor" d="M12 2l4 4H8l4-4m0 20l-4-4h8l-4 4M2 12l4-4v8l-4-4m20 0l-4 4V8l4 4z"/></svg></div>
+            <h3>实时推送</h3>
+            <p>集成任务队列与推送统计，支持失败重试与多渠道推送记录追踪。</p>
+            <ul class="bullets">
+              <li>队列处理与速率限制</li>
+              <li>推送记录与指标采集</li>
+              <li>可视化监控看板</li>
+            </ul>
+          </article>
+          <article class="card">
+            <div class="icon"><svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true"><path fill="currentColor" d="M12 1l3 5 6 .9-4.5 4.3L17 18l-5-2.7L7 18l1.5-6.8L4 6.9 10 6z"/></svg></div>
+            <h3>内容检测</h3>
+            <p>基础敏感内容检测接口与扩展点，保障推送合规性。</p>
+            <ul class="bullets">
+              <li>内容类型识别与过滤</li>
+              <li>可扩展检测适配器</li>
+              <li>异常报警与拦截</li>
+            </ul>
+          </article>
+          <article class="card">
+            <div class="icon"><svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true"><path fill="currentColor" d="M12 3a9 9 0 1 0 9 9 9.01 9.01 0 0 0-9-9m0 2a7 7 0 1 1-7 7 7 7 0 0 1 7-7m-1 3h2v5h-2zm0 6h2v2h-2z"/></svg></div>
+            <h3>安全与限流</h3>
+            <p>JWT 身份认证、权限校验、IP/用户级限流与黑白名单。</p>
+            <ul class="bullets">
+              <li>多维限流策略</li>
+              <li>强制权限边界</li>
+              <li>统一异常映射</li>
+            </ul>
+          </article>
+          <article class="card">
+            <div class="icon"><svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true"><path fill="currentColor" d="M3 3h18v2H3zm2 4h14v2H5zm-2 4h18v2H3zm2 4h14v2H5zm-2 4h18v2H3z"/></svg></div>
+            <h3>指标与告警</h3>
+            <p>内置 Prometheus/Grafana 指标采集，慢查询与错误追踪。</p>
+            <ul class="bullets">
+              <li>可观测性最佳实践</li>
+              <li>异常告警通道</li>
+              <li>可配置阈值</li>
+            </ul>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section id="architecture" class="section alt">
+      <div class="container">
+        <h2 class="section-title">系统架构</h2>
+        <p class="section-desc">模块化分层设计，解耦数据模型、服务层与接口层，适配器扩展外部平台。</p>
+        <div class="arch-diagram" role="img" aria-label="架构示意图">
+          <svg viewBox="0 0 900 280" xmlns="http://www.w3.org/2000/svg">
+            <defs>
+              <linearGradient id="grad" x1="0" x2="1" y1="0" y2="1">
+                <stop offset="0%" stop-color="#0ea5e9"/>
+                <stop offset="100%" stop-color="#22c55e"/>
+              </linearGradient>
+            </defs>
+            <rect x="20" y="20" width="860" height="240" rx="16" fill="rgba(255,255,255,0.6)" stroke="url(#grad)"/>
+            <g fill="#0f172a" font-size="13">
+              <rect x="50" y="50" width="240" height="60" rx="10" fill="#e2e8f0"/><text x="60" y="85">API 层 (FastAPI) · /api/v1/*</text>
+              <rect x="330" y="50" width="240" height="60" rx="10" fill="#e2e8f0"/><text x="340" y="85">服务层 · 认证/订阅/推送/搜索</text>
+              <rect x="610" y="50" width="240" height="60" rx="10" fill="#e2e8f0"/><text x="620" y="85">任务与推送 · Celery/队列</text>
+
+              <rect x="50" y="130" width="240" height="60" rx="10" fill="#c7d2fe"/><text x="60" y="165">搜索聚合器 · 适配器与缓存</text>
+              <rect x="330" y="130" width="240" height="60" rx="10" fill="#c7d2fe"/><text x="340" y="165">内容检测 · 风险控制</text>
+              <rect x="610" y="130" width="240" height="60" rx="10" fill="#c7d2fe"/><text x="620" y="165">权限与限流 · 安全</text>
+
+              <rect x="50" y="210" width="360" height="36" rx="8" fill="#bae6fd"/><text x="60" y="234">数据库 · SQLite/PostgreSQL · Redis 缓存</text>
+              <rect x="440" y="210" width="410" height="36" rx="8" fill="#bbf7d0"/><text x="450" y="234">监控 · Prometheus/Grafana · 日志与告警</text>
+            </g>
+          </svg>
+        </div>
+      </div>
+    </section>
+
+    <section id="quickstart" class="section">
+      <div class="container">
+        <h2 class="section-title">快速开始</h2>
+        <p class="section-desc">使用 Docker 一键启动开发环境，或直接运行后端与前端。</p>
+        <div class="grid two-cols">
+          <div class="card code">
+            <h3>Docker 启动</h3>
+            <pre class="code-block"><code>git clone &lt;your-repo&gt;
+cd AllRoundSubscription
+# 开发
+docker compose -f backend/docker-compose.yml up -d
+# 生产
+# docker compose -f backend/docker-compose.prod.yml up -d</code></pre>
+          </div>
+          <div class="card code">
+            <h3>本地运行</h3>
+            <pre class="code-block"><code># 后端
+cd backend
+pip install -r requirements.txt
+uvicorn app.main:app --reload --port 8000
+
+# 前端
+cd frontend
+npm install
+npm run dev</code></pre>
+          </div>
+        </div>
+        <div class="note">默认 API: http://localhost:8000/api/v1</div>
+      </div>
+    </section>
+
+    <section id="api" class="section alt">
+      <div class="container">
+        <h2 class="section-title">主要 API 路由</h2>
+        <div class="grid features-grid compact">
+          <article class="card small">
+            <h3>/auth</h3>
+            <ul class="api-list">
+              <li>POST /api/v1/auth/login</li>
+              <li>POST /api/v1/auth/refresh</li>
+              <li>GET /api/v1/auth/me</li>
+            </ul>
+          </article>
+          <article class="card small">
+            <h3>/search</h3>
+            <ul class="api-list">
+              <li>GET /api/v1/search?q=keyword</li>
+              <li>GET /api/v1/search/sources</li>
+            </ul>
+          </article>
+          <article class="card small">
+            <h3>/subscriptions</h3>
+            <ul class="api-list">
+              <li>POST /api/v1/subscriptions</li>
+              <li>GET /api/v1/subscriptions/{id}</li>
+              <li>DELETE /api/v1/subscriptions/{id}</li>
+            </ul>
+          </article>
+          <article class="card small">
+            <h3>/push</h3>
+            <ul class="api-list">
+              <li>POST /api/v1/push</li>
+              <li>GET /api/v1/push/records</li>
+            </ul>
+          </article>
+          <article class="card small">
+            <h3>/content</h3>
+            <ul class="api-list">
+              <li>POST /api/v1/content/detect</li>
+              <li>GET /api/v1/content/{id}</li>
+            </ul>
+          </article>
+          <article class="card small">
+            <h3>/users</h3>
+            <ul class="api-list">
+              <li>GET /api/v1/users/me</li>
+              <li>PATCH /api/v1/users/me</li>
+            </ul>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="section">
+      <div class="container">
+        <h2 class="section-title">联系与支持</h2>
+        <p class="section-desc">有问题或建议？欢迎提交 Issue 或 PR，一起把全能订阅做得更好。</p>
+        <div class="cta">
+          <a class="btn btn-primary" href="https://github.com/" target="_blank" rel="noopener">前往 GitHub</a>
+          <a class="btn btn-ghost" href="#quickstart">查看快速开始</a>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <button id="backToTop" class="back-to-top" aria-label="回到顶部" title="回到顶部">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><polyline points="18 15 12 9 6 15"></polyline></svg>
+  </button>
+
+  <footer class="site-footer">
+    <div class="container">
+      <div class="foot">
+        <span>© <span id="year"></span> 全能订阅 AllRound Subscription</span>
+        <span class="sep">·</span>
+        <span>MIT License</span>
+      </div>
+    </div>
+  </footer>
+
+  <script src="./assets/app.js"></script>
+</body>
+</html>
